--- a/src/components/About/About.module.sass
+++ b/src/components/About/About.module.sass
@@ -5,7 +5,6 @@
     gap: 20px
 
 .card
-  min-height: 402px
   max-width: 630px
   border-radius: 24px
   padding: 30px
@@ -52,3 +51,21 @@
 @media screen and (max-width: 1300px)
   .cont
     flex-direction: column
+
+
+@media screen and (max-width: 500px)
+  .our_mail
+    display: flex
+    gap: 10px
+    justify-content: center
+    flex-direction: column
+    align-items: center
+    
+  .wrapper
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    gap: 10px
+  
+
+
