--- a/src/components/Contact/style.module.sass
+++ b/src/components/Contact/style.module.sass
@@ -13,7 +13,6 @@
     background-size: cover
     background-repeat: no-repeat
     width: 100%
-    height: 333px
     display: flex
     flex-direction: column
     padding: 30px
@@ -21,6 +20,8 @@
     border: 1px solid #E6E8EB
     border-radius: 24px
     margin: auto
+    margin-bottom: -20px
+    z-index: 4
     &__title
         font-family: 'Nunito'
         font-style: normal
@@ -29,7 +30,9 @@
         line-height: 28px
         color: #2B3F5A
 .contact
-    display: flex
+    display: grid
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr))
+    gap: 100px
     &__data
         display: flex
         flex-direction: column
