--- a/src/components/Card/GridBlocks.module.sass
+++ b/src/components/Card/GridBlocks.module.sass
@@ -29,20 +29,30 @@
   border-radius: 15px
 
 
-.flexItem3
-    height: 140px
-    width: 213px
-    background: blue
-    border-radius: 15px
+.overlay
+    width: 100%
+    height: 100%
+    background: #333333
+    position: fixed
+    top: 0
+    left: 0
+    display: flex
+    justify-content: center
+    align-items: center
 
-.flexItem4
-    height: 140px
-    width: 213px
-    background: blue
-    border-radius: 15px
 
-.flexItem5
-    height: 140px
-    width: 213px
-    background: blue
-    border-radius: 15px
+.img
+    object-fit: cover
+
+
+.modal
+    position: relative
+
+.modal_btn
+    position: absolute
+    top: 0
+    right: 0
+    width: 30px
+    height: 30px
+    background: #333333
+    color: white
