refresh titles in sections

--- a/src/components/MainPage/Down.module.sass
+++ b/src/components/MainPage/Down.module.sass
@@ -105,6 +105,24 @@
       transform: scale(1.02)
       box-shadow: 0 4px 2px 3px #00000041
 
+.post_title_catalog
+  color: #2B3F5A
+  font-size: 24px
+  font-weight: 700
+  position: relative
+  margin-left: 10px
+  padding-bottom: 20px
+  &:before
+    content: ''
+    position: absolute
+    top: 0
+    background: #1087DC
+    width: 12px
+    height: 12px
+    left: -26px
+    top: 11px
+    border-radius: 50%
+
 .feedBack_title
   color: #2B3F5A
   padding-top: 45px
@@ -148,6 +166,7 @@
   line-height: 21px
   letter-spacing: 1px
   width: auto
+
 .catalog_cards
   display: flex
   gap: 10px
