--- a/src/components/Catalog_cards/catalog.module.sass
+++ b/src/components/Catalog_cards/catalog.module.sass
@@ -16,23 +16,18 @@
     top: 11px
     border-radius: 50%
 
-.catalog_cards
-  display: flex
-  gap: 10px
-  flex-wrap: wrap
-  padding-bottom: 30px
-  justify-content: center
-  .catalog_card
-    position: relative
-    width: 290px
-    padding: 10px
-    background: #fff
-    border-radius: 24px
+.catalog_card
+  position: relative
+  width: 100%
+  padding: 10px
+  background: #fff
+  border-radius: 24px
+  margin-bottom: 30px
 
 .weather_blog
   position: absolute
-  top: 24px
-  left: 50px
+  top: 26px
+  left: 95px
   // right: 70px
   padding: 12px
   background: rgba(43, 63, 90, 0.2)
@@ -46,6 +41,9 @@
 .sun_blog
   display: flex
   gap: 20px
+
+.catalog_title
+  font-size: 22px
 
 .icon_number
   color: #fff
@@ -61,6 +59,7 @@
   display: flex
   padding: 20px
   justify-content: space-between
+  // gap: 140px
 
 .link_catalog
   color: inherit
@@ -79,3 +78,54 @@
   line-height: 22px
   // padding: 20px
   color: #BAC0C9
+
+.swiper
+  display: flex
+  // flex-wrap: wrap
+  justify-content: center
+  gap: 30px
+  width: 100%
+  overflow-x: scroll
+
+  &-slide
+    text-align: center
+    font-size: 18px
+    background: #fff
+    display: flex
+    justify-content: center
+    align-items: center
+
+  &-slide img
+    display: block
+    // width: 100%
+    // height: 100%
+    object-fit: cover
+
+.card__image
+  width: 100%
+  object-fit: cover
+  border-radius: 20px
+
+  // &
+  //   width: 100%
+  //   height: 300px
+  //   margin: 20px auto
+
+.append-buttons
+  text-align: center
+  margin-top: 20px
+
+  & button
+    display: inline-block
+    cursor: pointer
+    border: 1px solid #007aff
+    color: #007aff
+    text-decoration: none
+    padding: 4px 10px
+    border-radius: 4px
+    margin: 0 10px
+    font-size: 13px
+
+@media screen and ( max-width: 1030px )
+  .post_title_catalog
+    text-align: center
