--- a/src/components/About/About.module.sass
+++ b/src/components/About/About.module.sass
@@ -1,8 +1,13 @@
 .cont
-    display: flex
-    justify-content: center
-    align-items: center
-    gap: 20px
+  display: flex
+  justify-content: center
+  align-items: flex-start
+  margin-top: 2.5rem
+  gap: 20px
+
+.blueBlog
+  max-width: 80rem
+  margin: auto
 
 .card
   max-width: 630px
@@ -21,8 +26,6 @@
   letter-spacing: 0px
   color: #2B3F5A
 
-
-
 .text
   font-size: 14px
   font-weight: 300
@@ -31,27 +34,26 @@
   color: #2B3F5A99
 
 .link
-    text-decoration: underline 1px solid #1087DC
-    color: #1087DC
+  text-decoration: underline 1px solid #1087DC
+  color: #1087DC
 
 .our_mail
-    display: flex
-    gap: 10px
-    flex-direction: column
+  display: flex
+  gap: 10px
+  flex-direction: column
 
 .our_tel
-    display: flex
-    gap: 10px
-    flex-direction: column
+  display: flex
+  gap: 10px
+  flex-direction: column
 
 .wrapper
-    display: flex
-    gap: 147px
+  display: flex
+  gap: 147px
 
 @media screen and (max-width: 1300px)
   .cont
     flex-direction: column
-
 
 @media screen and (max-width: 500px)
   .our_mail
@@ -60,12 +62,9 @@
     justify-content: center
     flex-direction: column
     align-items: center
-    
+
   .wrapper
     flex-direction: column
     justify-content: center
     align-items: center
     gap: 10px
-  
-
-
