--- a/src/components/Contact/style.module.sass
+++ b/src/components/Contact/style.module.sass
@@ -3,8 +3,9 @@
     display: flex
     flex-direction: column
     justify-content: center
-    align-content: center
+    align-items: center
     margin: auto
+    margin-top: 1.875rem
     &__map
         margin: auto !important
         width: 100% !important
