--- a/src/components/Catalog_cards/catalog.module.sass
+++ b/src/components/Catalog_cards/catalog.module.sass
@@ -16,6 +16,14 @@
     top: 11px
     border-radius: 50%
 
+.slider-button-next
+  width: 13.25rem
+  height: 1.25rem
+  background: #000
+  position: absolute
+  top: 1.25rem
+  left: 0
+
 .catalog_card
   position: relative
   width: 100%
