--- a/src/components/Contact/style.module.sass
+++ b/src/components/Contact/style.module.sass
@@ -5,15 +5,16 @@
     justify-content: center
     align-items: center
     margin: auto
+    overflow: hidden
     margin-top: 1.875rem
     &__map
         margin: auto !important
         width: 100% !important
 .card
+    width: 100%
     background-image: url("../../../public/banner.png")
     background-size: cover
     background-repeat: no-repeat
-    width: 100%
     display: flex
     flex-direction: column
     padding: 30px
